--- a/manager-ui/package.json
+++ b/manager-ui/package.json
@@ -111,13 +111,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-redux": "^7.1.24",
+    "antd": "^4.24.1",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.56.1"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -172,8 +174,7 @@
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.0.2",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.5",
     "ts-jest": "^28.0.8",
