--- a/manager-ui/package.json
+++ b/manager-ui/package.json
@@ -109,6 +109,7 @@
     }
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-redux": "^7.1.24",
     "antd": "^4.24.1",
